<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/music_streamer_notification">
        <CheckBoxPreference
            android:key="@string/notification_preference"
            android:title="@string/allow_notification_title"
            android:summary="@string/allow_notification_summary" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/spotify_country_code_title">

        <EditTextPreference
            android:key="@string/countrycode_preference"
            android:title="@string/spotify_country_code_title2"
            android:summary="@string/spotify_country_code_summary"
            android:dialogTitle="@string/spotify_country_code_dialog_title"
            android:inputType="text"
            android:digits="@string/alpha_characters" />
            />
    </PreferenceCategory>
</PreferenceScreen>